--- a/aphantasia_priming_analysis.qmd
+++ b/aphantasia_priming_analysis.qmd
@@ -3235,7 +3235,7 @@ report_packages(
 # 
 # df_per_subject <- df_per_subject %>% filter(!is.na(congruence_effect_explicit))
 # 
-# saving in the xlsx
+# # saving in the xlsx
 # write.xlsx(
 #   list("data_per_subject" = df_per_subject),
 #   "data/aphantasia_per_subject_data.xlsx",
