--- a/aphantasia_priming_analysis.qmd
+++ b/aphantasia_priming_analysis.qmd
@@ -180,7 +180,7 @@ cor_questionnaires <-
     )
 ```
 
-:::{.panel-tabset}
+:::{.panel-tabset .column-page-inset-right}
 
 #### Correlation matrix
 
@@ -262,9 +262,7 @@ pca <-
     ) 
 ```
 
-:::{.panel-tabset}
-
-#### PCA loadings
+:::{layout-ncol=1}
 
 ```{r loadings}
 #| label: fig-loadings
@@ -279,8 +277,6 @@ pca %>% plot +
   theme(text = element_text(size = 14))
 ```
 
-#### Eigenvalues / variance explained
-
 ```{r eigenvalues}
 #| label: tbl-eigenvalues
 #| tbl-cap: "Eigenvalues and variance explained by the three components extracted by a PCA."
@@ -288,12 +284,9 @@ pca %>% plot +
 # --- Eigenvalues and variance ---
 pca %>% 
   summary %>% 
-  rename(
-    "Component 1" = PC1,
-    "Component 2" = PC2,
-    "Component 3" = PC3,
-  ) %>%
-  format(digits = 2) %>% 
+  pivot_longer(cols = -Parameter) %>%
+  pivot_wider(names_from = Parameter) %>%
+  rename("Component" = name) %>%
   display
 ```
 
@@ -395,7 +388,7 @@ Now we can see that the main visual imagery variables, namely the (conventional)
 # p_spatial_correlations
 ```
 
-:::{.panel-tabset}
+:::{.panel-tabset .column-page-inset-right}
 
 #### Spatial and Visual Imagery
 
@@ -463,6 +456,7 @@ Now we can see that the main visual imagery variables, namely the (conventional)
        y = "Spatial Imagery")) %>% 
   ggplotly
 ```
+
 :::
 
 The consequence of this analysis is that from this point onwards two options are available to model the data:
@@ -695,7 +689,7 @@ While response time is an obvious outcome to model when it comes to decision tas
 # p_tasks_error_perc
 ```
 
-:::{.panel-tabset}
+:::{.panel-tabset .column-page-inset-right}
 
 #### Association task
 <!-- Percentage of errors -->
@@ -920,6 +914,8 @@ df_implicit_rt <-
   filter(rt_implicit > 300 & rt_implicit < 3000)
 ```
 
+:::{.column-page-inset-right}
+
 :::{.panel-tabset}
 
 #### Explicit task
@@ -993,6 +989,8 @@ df_rt <- bind_rows(df_rt[[1]], df_rt[[2]])
 df_rt %>% display
 ```
 
+:::
+
 For a more precise analysis of mean RTs, we are going to use an outlier detection method based on the Median Absolute Deviation (MAD). Common thresholds used for outlier detection in Gaussian distributions with MADs are $median \ \pm \ 3 \cdot MAD$ (Hampel filter; see Enderlein, 1987). However, the low boundary of this interval would be aberrant in our case of a skewed distribution, as all the participants with fast RT means stay above the $median \ - \ 1.5 \cdot MAD$. As for the high threshold, the choice of the $median \ + \ 3 \cdot MAD$ would set a highly conservative maximum (e.g. 1361ms for the explicit task) and bring the total number of removed trials over 13%. Therefore, after careful examination of the ranges, and in order to keep as many trials as possible, we chose to set the upper threshold at $median \ + \ 5 \cdot MAD$ (i.e. 1797ms for the explicit task, and 1386ms for the implicit task), resulting in an overall deletion of 7.9% of trials in the explicit task and 8.9% of trials in the implicit one in this whole data preprocessing. The resulting distributions of RTs for each participant are represented in @fig-rt_per_participant_1 and [-@fig-rt_per_participant_2].
 
 <!-- Removing second step RT outlier trials -->
@@ -1034,7 +1032,7 @@ df_implicit_rt %>%
 df_explicit_rt <- df_explicit_rt %>% filter(subjectid != "dchimenton")
 ```
 
-:::{.panel-tabset}
+:::{.panel-tabset .column-page-inset-right}
 
 #### Explicit task
 <!-- RT distribution for each participant -->
@@ -1460,12 +1458,16 @@ c_ex_col <-
 
 The parameters of the best model for the explicit task are displayed in @tbl-model_explicit_params_table. The significant parameters in the explicit task are the Color and the interaction between the Group and the Congruence conditions. The **main effect of Color** indicate that participants responded quicker in the colored condition (Marginal contrast (colored - uncolored) = `r c_ex_col[1,3]`, CI = $[`r c_ex_col[1,4]` ; `r c_ex_col[1,5]`]$, SE = `r c_ex_col[1,6]`, $p < .001$), although this effect has no interaction with the other variables. The **interaction between Group and Congruence** reveals that non-aphantasics responded slower in the uncongruent condition, as this contrast is the only significant one in this interaction (Marginal contrast (non-aphantasic congruent - incongruent) = `r c_ex_gcn[1,3]`, CI = $[`r c_ex_gcn[1,4]` ; `r c_ex_gcn[1,5]`]$, SE = `r c_ex_gcn[1,6]`, $p < .001$). These effects are illustrated in @fig-model_explicit_ggarrange. Both estimates are $\lt 0.2$, which denotes a *very small* effect size according to most standardized differences interpretation guidelines (e.g. Cohen, 1988; Gignac & Szodorai, 2016; Lovakov & Agadullina, 2021).
 
+:::{.column-page-inset-right}
+
 ```{r model_explicit_params_table}
 #| label: tbl-model_explicit_params_table
 #| tbl-cap: "Parameters of the optimal model for the explicit task including a random intercept and slope by subject on Congruence."
 
 all_models_parameters[["explicit_mods"]][["mod_explicit_4"]]
 ```
+
+:::
 
 <!-- Plot settings -->
 ```{r model_plots_general_settings}
@@ -1907,6 +1909,8 @@ p_mod_ex_gcol_zoom <-
     )
 ```
 
+:::{.column-page-inset-right}
+
 <!-- GCN and GCOL -->
 
 ```{r model_explicit_ggarrange}
@@ -1937,6 +1941,8 @@ p_mod_explicit_ggarrange <-
 p_mod_explicit_ggarrange
 ```
 
+:::
+  
 ## Implicit task results
 
 ```{r model_implicit_contrasts}
@@ -1950,12 +1956,16 @@ c_im_gcn <-
 
 The parameters of the best model for the **implicit task** are displayed in @tbl-model_implicit_params_table. The only significant parameter is the **interaction between Group and Congruence**. This interaction shows that non-aphantasics only responded slower in the incongruent condition, which is the only significant contrast (Marginal contrast (non-aphantasic congruent - incongruent) = `r c_im_gcn[1,3]`, CI = $[`r c_im_gcn[1,4]`;`r c_im_gcn[1,5]`]$, SE = `r c_im_gcn[1,6]`, $p = `r c_im_gcn[1,9]`$). This effect is represented in @fig-model_implicit_ggarrange. This estimate $\lt 0.2$, which denotes a *very small* effect size.
 
+:::{.column-page-inset-right}
+
 ```{r model_implicit_params_table}
 #| label: tbl-model_implicit_params_table
 #| tbl-cap: "Implicit task  - Parameters of the optimal model including a random intercept by subject."
 
 all_models_parameters[["implicit_mods"]][["mod_implicit_3"]]
 ```
+
+:::
 
 <!-- Implicit model group and congruence means -->
 ```{r model_implicit_gcn_plot_stats}
@@ -2127,6 +2137,8 @@ p_mod_im_gcn_interaction_zoom <-
     )
 ```
 
+:::{.column-page-inset-right}
+
 <!-- Implicit model group and congruence ggarrange -->
 ```{r model_implicit_ggarrange}
 #| label: fig-model_implicit_ggarrange
@@ -2148,6 +2160,8 @@ p_mod_implicit_ggarrange <-
 
 p_mod_implicit_ggarrange
 ```
+
+:::
 
 # Further EDA {#sec-further}
 
@@ -2256,7 +2270,7 @@ Why investigate the Congruence effect and mental imagery? The hypothesis is that
 
 In sum, we kept four variables: the Congruence effect in the Explicit and Implicit task, and the Visual and Spatial imageries. The distributions of these four variables are displayed in @fig-congruence_effect_explicit, [-@fig-congruence_effect_implicit], [-@fig-visual_imagery], and [-@fig-spatial_imagery]. Note that the Congruence effect is **not** $(Congruent \ RT - Incongruent \ RT)$, but the $standardized \ parameter \ \beta_{2_{subject[i]}}$ from the model for the Congruence effect per subject: therefore, a ***positive Congruence effect denotes a higher response time in the incongruent condition*** (which is arguably more intuitive).
 
-:::{.panel-tabset}
+:::{.panel-tabset .column-page-inset-right}
 
 #### Explicit - Congruence
 
@@ -2378,7 +2392,7 @@ In sum, we kept four variables: the Congruence effect in the Explicit and Implic
 
 ### Correlational analysis
 
-We want to characterize the Congruence effect with imagery variables. Thus, we will study the correlations between the three variables: 1) Congruence effect, 2) visual and 3) spatial imagery, *separately* in the explicit and implicit task. Let's analyse this link with Bayesian partial correlations, displayed in @fig-cor_matrix_congruence_explicit and [-@fig-cor_matrix_congruence_implicit].
+We want to characterize the Congruence effect with imagery variables. Thus, we will study the correlations between the three variables: 1) Congruence effect, 2) visual and 3) spatial imagery, *separately* in the explicit and implicit task. Let's analyse this link with Bayesian partial correlations, displayed in @fig-cor_matrix_congruence_explicit<!-- and [-@fig-cor_matrix_congruence_implicit]-->.
 
 ```{r correlation_congruence_effect}
 #| code-summary: "Computing correlations"
@@ -2407,13 +2421,87 @@ congruence_correlations_implicit <-
 
 ```
 
-:::{.panel-tabset}
+<!-- :::{.panel-tabset} -->
 
-#### Explicit task
+<!-- #### Explicit task -->
 
-```{r cor_matrix_congruence_explicit}
+<!-- ```{r cor_matrix_congruence_explicit} -->
+<!-- #| label: fig-cor_matrix_congruence_explicit -->
+<!-- #| fig-cap: "Correlation matrix with the Congruence effect in the explicit task. The stars indicate the amount of evidence in favour of a correlation, as assessed by the $BF_{10}$: No star = Anecdotal evidence, * = Weak evidence, ** = Moderate evidence, *** = Extreme evidence." -->
+
+<!-- congruence_correlations_explicit %>% -->
+<!--   mutate(across(c(Parameter1, Parameter2), -->
+<!--     ~ case_when( -->
+<!--     .x == "visual_imagery" ~ "Visual imagery", -->
+<!--     .x == "spatial_imagery" ~ "Spatial imagery", -->
+<!--     .x == "congruence_effect_explicit" ~ "Congruence effect", -->
+<!--     TRUE ~ .x)) -->
+<!--     ) %>%  -->
+<!--   summary(digits = 2) %>%  -->
+<!--   plot( -->
+<!--     text = list(size = 5), -->
+<!--     labs = list(title = "") -->
+<!--     ) + -->
+<!--   scale_fill_viridis( -->
+<!--     option = "D", -->
+<!--     guide = NULL, -->
+<!--     # name = expression(rho), -->
+<!--     alpha = .6, -->
+<!--     direction = 1, -->
+<!--     limits = c(-1,1) -->
+<!--     ) + -->
+<!--   theme_bw() + -->
+<!--   theme( -->
+<!--     panel.grid = element_blank(), -->
+<!--     axis.text = element_text(size = 14) -->
+<!--     ) -->
+<!-- ``` -->
+
+<!-- #### Implicit task -->
+
+<!-- ```{r cor_matrix_congruence_implicit} -->
+<!-- #| label: fig-cor_matrix_congruence_implicit -->
+<!-- #| fig-cap: "Correlation matrix with the Congruence effect in the implicit task. The stars indicate the amount of evidence in favour of a correlation, as assessed by the $BF_{10}$: No star = Anecdotal evidence, * = Weak evidence, ** = Moderate evidence, *** = Extreme evidence." -->
+
+<!-- congruence_correlations_implicit %>% -->
+<!--   mutate(across(c(Parameter1, Parameter2), -->
+<!--     ~ case_when( -->
+<!--     .x == "visual_imagery" ~ "Visual imagery", -->
+<!--     .x == "spatial_imagery" ~ "Spatial imagery", -->
+<!--     .x == "congruence_effect_implicit" ~ "Congruence effect", -->
+<!--     TRUE ~ .x)) -->
+<!--     ) %>%  -->
+<!--   summary(digits = 2) %>% -->
+<!--   plot( -->
+<!--     text = list(size = 5), -->
+<!--     labs = list(title = "") -->
+<!--     ) + -->
+<!--   scale_fill_viridis( -->
+<!--     option = "D", -->
+<!--     guide = NULL, -->
+<!--     # name = expression(rho), -->
+<!--     alpha = .6, -->
+<!--     direction = 1, -->
+<!--     limits = c(-1,1) -->
+<!--     ) + -->
+<!--   theme_bw() + -->
+<!--   theme( -->
+<!--     panel.grid = element_blank(), -->
+<!--     axis.text = element_text(size = 14) -->
+<!--     ) -->
+<!-- ``` -->
+
+<!-- ::: -->
+
+:::{.column-page-inset-right}
+
+```{r cor_matrix_congruence}
 #| label: fig-cor_matrix_congruence_explicit
-#| fig-cap: "Correlation matrix with the Congruence effect in the explicit task. The stars indicate the amount of evidence in favour of a correlation, as assessed by the $BF_{10}$: No star = Anecdotal evidence, * = Weak evidence, ** = Moderate evidence, *** = Extreme evidence."
+#| fig-cap: "Correlation matrix with the Congruence effect in both tasks. The stars indicate the amount of evidence in favour of a correlation, as assessed by the $BF_{10}$: No star = Anecdotal evidence, * = Weak evidence, ** = Moderate evidence, *** = Extreme evidence."
+#| fig-subcap: 
+#|   - "Explicit task."
+#|   - "Implicit task."
+#| layout-ncol: 2
 
 congruence_correlations_explicit %>%
   mutate(across(c(Parameter1, Parameter2),
@@ -2441,13 +2529,6 @@ congruence_correlations_explicit %>%
     panel.grid = element_blank(),
     axis.text = element_text(size = 14)
     )
-```
-
-#### Implicit task
-
-```{r cor_matrix_congruence_implicit}
-#| label: fig-cor_matrix_congruence_implicit
-#| fig-cap: "Correlation matrix with the Congruence effect in the implicit task. The stars indicate the amount of evidence in favour of a correlation, as assessed by the $BF_{10}$: No star = Anecdotal evidence, * = Weak evidence, ** = Moderate evidence, *** = Extreme evidence."
 
 congruence_correlations_implicit %>%
   mutate(across(c(Parameter1, Parameter2),
