--- a/aphantasia_priming_analysis.qmd
+++ b/aphantasia_priming_analysis.qmd
@@ -321,79 +321,7 @@ rm(pca, pca_components)
 
 Now we can see that the main visual imagery variables, namely the (conventional) VVIQ and the *Visual Imagery* component created through PCA are completely decorrelated from the *Spatial Imagery* component, as shown in @fig-spatial_corr1 and [-@fig-spatial_corr2].
 
-<<<<<<< Updated upstream
-<!-- ggpubr ggarranges replacd by plotly panels further down -->
-```{r spatial_correlations_ggarrange}
-#| out-width: 100%
-#| eval: false
-
-# # --- correlation between visual and spatial ---
-# p_cor_spatial_vis <-
-#   df_questionnaires %>%
-#   mutate(
-#     visual_imagery = rescale(visual_imagery),
-#     spatial_imagery = rescale(spatial_imagery),
-#     aphantasia = fct_relevel(aphantasia, "yes", "no")
-#     ) %>%
-#   ggplot(aes(x = visual_imagery, y = spatial_imagery)) +
-#   geom_point(aes(color = aphantasia)) +
-#   scale_color_okabeito(name = "Aphantasia", labels = c("Yes", "No")) +
-#   geom_smooth(
-#     aes(x = visual_imagery, y = spatial_imagery),
-#     color = "black",
-#     method = "lm",
-#     stat = "smooth") +
-#   stat_cor(
-#     aes(x = visual_imagery,
-#         y = spatial_imagery),
-#     inherit.aes = FALSE,
-#     cor.coef.name = "r",
-#     label.x.npc = .5,
-#     label.y.npc = .7) +
-#   labs(x = "Visual Imagery",
-#        y = "Spatial Imagery")
-# 
-# # --- correlation between vviq and spatial ---
-# p_cor_spatial_vviq <-
-#   df_questionnaires %>%
-#   mutate(
-#     vviq80 = rescale(vviq80),
-#     spatial_imagery = rescale(spatial_imagery)
-#     ) %>%
-#   ggplot(aes(x = vviq80, y = spatial_imagery)) +
-#   geom_point(aes(color = aphantasia)) +
-#   scale_color_okabeito(name = "Aphantasia", labels = c("Yes", "No")) +
-#   geom_smooth(
-#     aes(x = vviq80, y = spatial_imagery),
-#     color = "black",
-#     method = "lm",
-#     stat = "smooth") +
-#   stat_cor(
-#     aes(x = vviq80,
-#         y = spatial_imagery),
-#     inherit.aes = FALSE,
-#     cor.coef.name = "r",
-#     label.x.npc = .5,
-#     label.y.npc = .7) +
-#   labs(x = "VVIQ",
-#        y = "Spatial Imagery")
-# 
-# p_spatial_correlations <-
-#   ggarrange(
-#   p_cor_spatial_vis,
-#   p_cor_spatial_vviq + rremove("ylab"),
-#   common.legend = TRUE,
-#   legend = "bottom"
-#   )
-#
-# rm(p_cor_spatial_vis, p_cor_spatial_vviq)
-# p_spatial_correlations
-```
-
 :::{.panel-tabset .column-page-inset-right}
-=======
-:::{.panel-tabset}
->>>>>>> Stashed changes
 
 #### Spatial and Visual Imagery
 
@@ -518,187 +446,7 @@ rm(dfs)
 
 While response time is an obvious outcome to model when it comes to decision tasks, the use of accuracy is more debatable, as the tasks were not specifically designed to be challenging. Traditionally, accuracy is mostly used to remove incorrect trials from RT modelling. We'll describe accuracy data to evaluate its relevance in this analysis. The distribution of the percentages of errors across the three tasks is displayed in @fig-tasks_errors, [-@fig-tasks_errors2], and [-@fig-tasks_errors3].
 
-<<<<<<< Updated upstream
-<!-- ggpubr ggarrange replaced by plotly panels further down -->
-```{r tasks_errors_ggarrange}
-
-# p_errors_asso <-
-#   (df_asso %>%
-#   select(subjectid, correct_association, aphantasia) %>% 
-#   group_by(subjectid, aphantasia) %>% 
-#   count(correct_association) %>% 
-#   filter(correct_association == 1) %>% 
-#   mutate(n = 100 - n) %>% 
-#   ggplot(aes(
-#     x = n, 
-#     color = aphantasia,
-#     fill = aphantasia
-#     )) +
-#   geom_bar(
-#     aes(y = after_stat(prop)),
-#     position = position_dodge(),
-#     width = .8,
-#     alpha = .5
-#     ) +
-#   scale_x_continuous(
-#     name = "Percentage of errors",
-#     breaks = breaks_pretty(n = 20)
-#     ) +
-#   scale_y_continuous(
-#     name = "Proportion of the group",
-#     breaks = breaks_pretty(n = 10)
-#     ) +
-#   coord_cartesian(
-#     xlim = c(0.5, 24),
-#     ylim = c(.01,.36)
-#     ) +
-#   labs(
-#     title = "Association task",
-#     # x = NULL,
-#     # y = "Proportion of the group"
-#     # y = NULL
-#     ) +
-#   scale_color_okabeito(guide = NULL) +
-#   scale_fill_okabeito(name = "Aphantasia", labels = c("Yes", "No"))) %>% 
-#   # ggplotly-ing it
-#   ggplotly #%>%
-#   # layout(
-#   #   annotations = list(
-#   #     list(
-#   #       x = .01, 
-#   #       y = 1.11, 
-#   #       text = "Association task", 
-#   #       showarrow = F, 
-#   #       xref='paper', 
-#   #       yref='paper'
-#   #       )))
-# 
-# p_errors_implicit <-
-#   (df_implicit %>%
-#   select(subjectid, correct_implicit, aphantasia) %>% 
-#   group_by(subjectid, aphantasia) %>% 
-#   count(correct_implicit) %>% 
-#   filter(correct_implicit == 1) %>% 
-#   mutate(n = (64 - n)/64 * 100) %>% 
-#   ggplot(aes(
-#     x = n, 
-#     color = aphantasia,
-#     fill = aphantasia
-#     )) +
-#   geom_bar(
-#     aes(y = after_stat(prop)),
-#     position = position_dodge(),
-#     width = .6,
-#     alpha = .6
-#     ) +
-#   scale_x_continuous(
-#     name = "Percentage of errors",
-#     breaks = breaks_pretty(n = 20)
-#     ) +
-#   scale_y_continuous(
-#     name = "Proportion of the group",
-#     breaks = breaks_pretty(n = 10)
-#     ) +
-#   coord_cartesian(
-#     xlim = c(1, 40),
-#     ylim = c(.01,.28)
-#     ) +
-#   labs(
-#     title = "Implicit task",
-#     # x = "Percentage of errors",
-#     # y = "Proportion of the group"
-#     # y = NULL
-#     ) +
-#   scale_color_okabeito(guide = NULL) +
-#   scale_fill_okabeito(name = "Aphantasia", labels = c("Yes", "No"))) %>% 
-#   # plotly-ing it
-#   ggplotly #%>%
-#   # layout(
-#   #   annotations = list(
-#   #     list(
-#   #       x = .01, 
-#   #       y = 1, 
-#   #       text = "Implicit task", 
-#   #       showarrow = F, 
-#   #       xref='paper', 
-#   #       yref='paper'
-#   #       ))) %>% 
-#   # style(showlegend = FALSE)
-# 
-# p_errors_explicit <-
-#   (df_explicit %>%
-#   select(subjectid, correct_explicit, aphantasia) %>% 
-#   group_by(subjectid, aphantasia) %>% 
-#   count(correct_explicit) %>% 
-#   filter(correct_explicit == 1) %>% 
-#   mutate(n = (64 - n)/64 * 100) %>% 
-#   ggplot(aes(
-#     x = n, 
-#     color = aphantasia,
-#     fill = aphantasia
-#     )) +
-#   geom_bar(
-#     aes(y = after_stat(prop)),
-#     position = position_dodge(),
-#     width = .6,
-#     alpha = .6
-#     ) +
-#   scale_x_continuous(
-#     name = "Percentage of errors",
-#     breaks = breaks_pretty(n = 20)
-#     ) +
-#   scale_y_continuous(
-#     name = "Proportion of the group",
-#     breaks = breaks_pretty(n = 10)
-#     ) +
-#   coord_cartesian(
-#     xlim = c(1, 46),
-#     ylim = c(.01,.36)
-#     ) +
-#   labs(
-#     title = "Explicit task",
-#     # x = NULL,
-#     # y = "Proportion of the group"
-#     ) +
-#   scale_color_okabeito(guide = NULL) +
-#   scale_fill_okabeito(name = "Aphantasia", labels = c("Yes", "No"))) %>% 
-#   # plotly-ing it
-#   ggplotly #%>%
-#   # layout(
-#   #   annotations = list(
-#   #     list(
-#   #       x = .01, 
-#   #       y = 1.065, 
-#   #       text = "Explicit task", 
-#   #       showarrow = F, 
-#   #       xref='paper', 
-#   #       yref='paper'
-#   #       ))) %>% 
-#   # style(showlegend = FALSE)
-  
-# # garrange
-# p_tasks_error_perc <-
-#   ggarrange(
-#   p_errors_asso,
-#   p_errors_explicit,
-#   p_errors_implcit,
-#   ncol = 1,
-#   common.legend = TRUE,
-#   legend = "right"
-#   ) %>%
-#   annotate_figure(
-#     left = text_grob("Proportion of the group", size = 20, rot = 90),
-#     bottom = text_grob("Percentage of errors", size = 20)
-#     )
-
-# rm(p_errors_asso, p_errors_explicit, p_errors_implcit)
-# p_tasks_error_perc
-```
-
 :::{.panel-tabset .column-page-inset-right}
-=======
-:::{.panel-tabset}
->>>>>>> Stashed changes
 
 #### Association task
 <!-- Percentage of errors -->
@@ -916,6 +664,7 @@ As a preprocessing, response times below 300ms and above 3000ms will be removed 
 ```{r removing_first_rt_outliers}
 #| code-summary: "Removing extreme RTs"
 #| echo: true
+#| output: false
 
 # --- First broad RT outlier trials removal ---
 df_explicit_rt <- 
@@ -936,9 +685,7 @@ df_implicit_rt <-
 # 9017 left, 647 = 6.7% removed
 ```
 
-:::{.column-page-inset-right}
-
-:::{.panel-tabset}
+:::{.panel-tabset .column-page-inset-right}
 
 #### Explicit task
 <!-- RT means -->
@@ -988,9 +735,9 @@ df_implicit_rt <-
   ggplotly
 ```
 
-:::
-
+#### RT means table
 <!-- RT means table -->
+
 ```{r rt_means_table}
 #| label: tbl-rt_means
 #| tbl-cap: "Descriptive statistics of the average RTs across the sample in both tasks."
@@ -1012,13 +759,9 @@ df_rt %>% display
 
 ```
 
-<<<<<<< Updated upstream
 :::
 
-For a more precise analysis of mean RTs, we are going to use an outlier detection method based on the Median Absolute Deviation (MAD). Common thresholds used for outlier detection in Gaussian distributions with MADs are $median \ \pm \ 3 \cdot MAD$ (Hampel filter; see Enderlein, 1987). However, the low boundary of this interval would be aberrant in our case of a skewed distribution, as all the participants with fast RT means stay above the $median \ - \ 1.5 \cdot MAD$. As for the high threshold, the choice of the $median \ + \ 3 \cdot MAD$ would set a highly conservative maximum (e.g. 1361ms for the explicit task) and bring the total number of removed trials over 13%. Therefore, after careful examination of the ranges, and in order to keep as many trials as possible, we chose to set the upper threshold at $median \ + \ 5 \cdot MAD$ (i.e. 1797ms for the explicit task, and 1386ms for the implicit task), resulting in an overall deletion of 7.9% of trials in the explicit task and 8.9% of trials in the implicit one in this whole data preprocessing. The resulting distributions of RTs for each participant are represented in @fig-rt_per_participant_1 and [-@fig-rt_per_participant_2].
-=======
 For a more precise analysis of mean RTs, we are going to use an outlier detection method based on the Median Absolute Deviation (MAD). Common thresholds used for outlier detection in Gaussian distributions with MADs are $median \ \pm \ 3 \cdot MAD$ (Hampel filter; see Enderlein, 1987). However, the low boundary of this interval would be aberrant in our case of a skewed distribution, as all the participants with fast RT means even stay above the $median \ - \ 2 \cdot MAD$. As for the high threshold, the choice of the $median \ + \ 3 \cdot MAD$ would set a highly conservative maximum (e.g. 1385ms for the explicit task) and bring the total number of removed trials over 14%. Therefore, after careful examination of the ranges, and in order to keep as many trials as possible, we chose to set the upper threshold at $median \ + \ 5 \cdot MAD$ (i.e. 1797ms for the explicit task, and 1386ms for the implicit task), resulting in an overall deletion of 7.9% of trials in the explicit task and 8.9% of trials in the implicit one in this whole data preprocessing. The resulting distributions of RTs for each participant are represented in @fig-rt_per_participant_1 and [-@fig-rt_per_participant_2]. As we are going to transform the data before modelling it, we also visualized the resulting distributions after having undergone a Box-Cox transformation and a normalization.
->>>>>>> Stashed changes
 
 <!-- Removing second step RT outlier trials -->
 ```{r removing_second_rt_outliers}
@@ -1079,13 +822,10 @@ df_implicit_rt <-
 #   count() # 147 participants left
 ```
 
-<<<<<<< Updated upstream
-:::{.panel-tabset .column-page-inset-right}
-=======
+
 <!-- Maybe add "For a similar procedure, see Lefevre et al. (2022), or what she cites, Leys et al. (2013)" -->
 
-:::{.panel-tabset}
->>>>>>> Stashed changes
+:::{.panel-tabset .column-page-inset-right}
 
 #### Explicit task
 <!-- RT distribution for each participant -->
@@ -1551,7 +1291,8 @@ c_ex_gcn <-
   estimate_contrasts(
     contrast = c("aphantasia", "congruence"), 
     lmerTest.limit = 9000, 
-    pbkrtest.limit = 9000
+    pbkrtest.limit = 9000,
+    p_adjust = "fdr"
   ) %>% 
   mutate(across(where(is.numeric), ~ round(.x, digits = 2)))
 
@@ -1561,7 +1302,8 @@ c_ex_col <-
   estimate_contrasts(
     contrast = c("color"), 
     lmerTest.limit = 9000, 
-    pbkrtest.limit = 9000
+    pbkrtest.limit = 9000,
+    p_adjust = "fdr"
   ) %>% 
   mutate(across(where(is.numeric), ~ round(.x, digits = 2)))
 ```
@@ -2071,7 +1813,8 @@ c_im_gcn <-
   estimate_contrasts(
     contrast = c("aphantasia", "congruence"), 
     lmerTest.limit = 9000, 
-    pbkrtest.limit = 9000
+    pbkrtest.limit = 9000,
+    p_adjust = "fdr"
   ) %>% 
   mutate(across(where(is.numeric), ~ round(.x, digits = 2)))
 ```
@@ -2098,7 +1841,8 @@ preds_mod_3_fixed_congruence <-
   estimate_means(
     at = c("aphantasia", "congruence"), 
     lmerTest.limit = 9000, 
-    pbkrtest.limit = 9000
+    pbkrtest.limit = 9000,
+    p_adjust = "fdr"
   )
 ```
 
